--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Surprise</title>
+  <title>Birthday Surprise for Suhani</title>
   <style>
     body {
       margin: 0;
@@ -91,22 +91,22 @@
 </div>
 
 <div class="cake-container" id="cakeContainer">
-  <img src="https://img.icons8.com/emoji/256/birthday-cake.png" alt="Birthday Cake">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Birthday_cake.jpg/800px-Birthday_cake.jpg" alt="Birthday Cake">
   <p>🎂 Blow the candles to reveal the surprise! 🎂</p>
   <button onclick="revealMessage()">Blow Candles</button>
 </div>
 
 <div class="message-container" id="messageContainer">
   <h2>🎉 Happy Birthday, Suhani! 🎉</h2>
-  <p>Born on 4th January, you light up the world like a star. 🌟<br>  
-     May your smile be as bright as the sun, and your laughter as sweet as the cake!</p>
+  <p>Wishing you a magical day filled with happiness and laughter. You light up every moment with your sweet smile. Have the best birthday ever!</p>
+  <p>🎂 Date of Birth: 4th January 🎂</p>
   <button onclick="showPhoto()">See Your Surprise</button>
 </div>
 
 <div class="photo-container" id="photoContainer">
   <h1>🎉 Happy Birthday, Suhani! 🎉</h1>
   <img src="https://img.icons8.com/emoji/256/party-popper.png" alt="Celebration">
-  <p>You're the reason every moment feels magical! 🌸 Have the most amazing birthday ever!</p>
+  <p>You are amazing and loved by everyone around you. Keep shining like the star you are! 🥳</p>
 </div>
 
 <script>
@@ -136,4 +136,3 @@
 
 </body>
 </html>
-
