--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to bottom, #cce7ff, #0052cc);
+      font-family: 'Verdana', sans-serif;
+      background: linear-gradient(to bottom, #85C1E9, #2980B9);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       overflow: hidden;
     }
+
     .card {
       width: 300px;
       height: 200px;
-      background: #e6f7ff;
-      border: 3px solid #3399ff;
+      background: #e0f7fa;
+      border: 3px solid #1f77b4;
       border-radius: 10px;
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
       text-align: center;
       cursor: pointer;
       transform-origin: right;
       transform: rotateY(0deg);
       transition: transform 1s ease-in-out;
+      position: relative;
+      z-index: 2;
     }
     .card.open {
       transform: rotateY(180deg);
@@ -38,64 +41,105 @@
       height: 100%;
       font-size: 24px;
       font-weight: bold;
-      color: #0052cc;
+      color: #1f77b4;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
+
     .cake-container {
       display: none;
       flex-direction: column;
       align-items: center;
       text-align: center;
       color: white;
+      z-index: 1;
     }
+
     .cake-container img {
-      width: 150px;
+      width: 160px;
+      animation: cakeGlow 2s infinite alternate;
     }
+
+    @keyframes cakeGlow {
+      0% { opacity: 0.7; }
+      100% { opacity: 1; }
+    }
+
     .message-container, .photo-container {
       display: none;
       text-align: center;
       color: white;
       animation: fadeIn 2s ease-in-out forwards;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
     }
+
     .message-container h2, .photo-container h1 {
       margin: 20px 0;
     }
+
+    .message-container p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
     .photo-container img {
       width: 200px;
       border-radius: 50%;
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
     }
+
     button {
-      padding: 10px 20px;
-      background: #0052cc;
+      padding: 12px 24px;
+      background: #1f77b4;
       color: white;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 50px;
+      font-size: 18px;
       cursor: pointer;
       margin-top: 20px;
-      transition: background 0.3s ease-in-out;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s ease, transform 0.2s ease;
     }
     button:hover {
-      background: #3399ff;
+      background: #3498db;
+      transform: scale(1.1);
+    }
+
+    .party-popper {
+      width: 100px;
+      margin-top: 20px;
+    }
+
+    .card-flip {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: #1f77b4;
+      font-size: 18px;
+      font-weight: bold;
+      letter-spacing: 1px;
     }
   </style>
 </head>
 <body>
 
+<!-- Birthday Card -->
 <div class="card" id="birthdayCard">
   <div class="card-content">🎉 Tap to Open 🎉</div>
 </div>
 
+<!-- Birthday Cake -->
 <div class="cake-container" id="cakeContainer">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Birthday_cake.jpg/800px-Birthday_cake.jpg" alt="Birthday Cake">
+  <img src="https://img.icons8.com/external-flat-juicy-fish/64/000000/external-cake-birthday-cake-flat-external-flat-juicy-fish.png" alt="Birthday Cake">
   <p>🎂 Blow the candles to reveal the surprise! 🎂</p>
   <button onclick="revealMessage()">Blow Candles</button>
 </div>
 
+<!-- Birthday Message -->
 <div class="message-container" id="messageContainer">
   <h2>🎉 Happy Birthday, Suhani! 🎉</h2>
   <p>Wishing you a magical day filled with happiness and laughter. You light up every moment with your sweet smile. Have the best birthday ever!</p>
@@ -103,31 +147,39 @@
   <button onclick="showPhoto()">See Your Surprise</button>
 </div>
 
+<!-- Final Surprise Photo -->
 <div class="photo-container" id="photoContainer">
   <h1>🎉 Happy Birthday, Suhani! 🎉</h1>
-  <img src="https://img.icons8.com/emoji/256/party-popper.png" alt="Celebration">
+  <img src="https://img.icons8.com/emoji/256/party-popper.png" alt="Celebration" class="party-popper">
   <p>You are amazing and loved by everyone around you. Keep shining like the star you are! 🥳</p>
 </div>
+
+<div class="card-flip" id="flipText">🎁 Flip me for the surprise! 🎁</div>
 
 <script>
   const card = document.getElementById('birthdayCard');
   const cakeContainer = document.getElementById('cakeContainer');
   const messageContainer = document.getElementById('messageContainer');
   const photoContainer = document.getElementById('photoContainer');
+  const flipText = document.getElementById('flipText');
 
+  // Card flip effect
   card.addEventListener('click', () => {
     card.classList.add('open');
+    flipText.style.display = 'none';
     setTimeout(() => {
       card.style.display = 'none';
       cakeContainer.style.display = 'flex';
     }, 1000);
   });
 
+  // Show birthday message
   function revealMessage() {
     cakeContainer.style.display = 'none';
     messageContainer.style.display = 'block';
   }
 
+  // Show final photo and message
   function showPhoto() {
     messageContainer.style.display = 'none';
     photoContainer.style.display = 'block';
