--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <!-- Birthday Cake -->
 <div class="cake-container" id="cakeContainer">
-  <img src="https://img.icons8.com/external-flat-juicy-fish/64/000000/external-cake-birthday-cake-flat-external-flat-juicy-fish.png" alt="Birthday Cake">
+  <img src="https://images.rawpixel.com/image_png_300/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8yMl9iaXJ0aGRheV9jYWtlX2N1dGVfM2RfaXNvbGF0ZWRfb25fd2hpdGVfYmFja19lN2Y5ZWJiYi1kMTE4LTQzZDQtOGQ2Ni02ZDk4YjQyODM5MzkucG5n.png">
   <p>🎂 Blow the candles to reveal the surprise! 🎂</p>
   <button onclick="revealMessage()">Blow Candles</button>
 </div>
