--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Verdana', sans-serif;
-      background: radial-gradient(circle, #85C1E9, #2980B9, #154360);
+      background: linear-gradient(to bottom, #85C1E9, #5DADE2, #154360);
       animation: gradientShift 10s infinite alternate;
       height: 100vh;
       display: flex;
@@ -18,41 +18,81 @@
     }
 
     @keyframes gradientShift {
-      0% { background: radial-gradient(circle, #85C1E9, #2980B9); }
-      50% { background: radial-gradient(circle, #2980B9, #154360); }
-      100% { background: radial-gradient(circle, #154360, #85C1E9); }
+      0% { background: linear-gradient(to bottom, #85C1E9, #5DADE2, #154360); }
+      50% { background: linear-gradient(to bottom, #154360, #85C1E9, #5DADE2); }
+      100% { background: linear-gradient(to bottom, #5DADE2, #154360, #85C1E9); }
     }
 
-    /* Floating Elements */
-    .floating {
+    /* Confetti */
+    .confetti {
       position: absolute;
       width: 100%;
       height: 100%;
       overflow: hidden;
       pointer-events: none;
+      z-index: 1;
     }
 
-    .floating span {
+    .confetti span {
       position: absolute;
-      display: block;
-      width: 15px;
-      height: 15px;
+      width: 10px;
+      height: 10px;
       background: rgba(255, 255, 255, 0.8);
       border-radius: 50%;
-      animation: float 8s infinite ease-in-out;
+      animation: confettiFall 5s linear infinite;
     }
 
-    @keyframes float {
-      0% { transform: translateY(100vh) scale(0.8); }
-      50% { transform: translateY(50vh) scale(1); }
-      100% { transform: translateY(-10vh) scale(0.8); }
+    @keyframes confettiFall {
+      0% {
+        transform: translateY(0) rotate(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 0;
+      }
     }
 
-    /* Card Styles */
+    /* Balloons */
+    .balloons {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    .balloon {
+      position: absolute;
+      width: 40px;
+      height: 60px;
+      background: radial-gradient(circle, #ff6b6b, #e74c3c);
+      border-radius: 50%;
+      animation: floatUp 6s infinite ease-in-out;
+    }
+
+    .balloon:before {
+      content: '';
+      position: absolute;
+      bottom: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 2px;
+      height: 20px;
+      background: #d3d3d3;
+    }
+
+    @keyframes floatUp {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+      100% { transform: translateY(-200vh); }
+    }
+
+    /* Card */
     .card {
       width: 320px;
       height: 220px;
-      background: linear-gradient(135deg, #5DADE2, #2980B9);
+      background: linear-gradient(135deg, #fbc2eb, #a18cd1);
       border-radius: 15px;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4), inset 0 0 10px rgba(255, 255, 255, 0.5);
       text-align: center;
@@ -63,6 +103,10 @@
       position: relative;
       z-index: 2;
       border: 5px solid rgba(255, 255, 255, 0.6);
+    }
+
+    .card:hover {
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5), inset 0 0 15px rgba(255, 255, 255, 0.8);
     }
 
     .card.open {
@@ -76,38 +120,44 @@
       height: 100%;
       font-size: 26px;
       font-weight: bold;
-      color: #154360;
+      color: #e84393;
       text-transform: uppercase;
       letter-spacing: 3px;
     }
 
-    /* Music Toggle Button */
-    .music-toggle {
+    .card-flip {
       position: absolute;
-      bottom: 20px;
-      right: 20px;
-      background: #1F618D;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 50px;
-      font-size: 16px;
-      cursor: pointer;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-      transition: background 0.3s ease, transform 0.2s ease;
+      top: 10px;
+      right: 10px;
+      color: #e84393;
+      font-size: 18px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      animation: pulse 1.5s infinite ease-in-out;
     }
 
-    .music-toggle:hover {
-      background: #3498DB;
-      transform: scale(1.1);
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.1); opacity: 0.8; }
     }
   </style>
 </head>
 <body>
-  <!-- Floating Elements -->
-  <div class="floating">
-    <span style="top: 90%; left: 20%; animation-delay: 0.5s;"></span>
-    <span style="top: 85%; left: 70%; animation-delay: 1.5s;"></span>
+  <!-- Confetti -->
+  <div class="confetti">
+    <span style="top: 5%; left: 10%;"></span>
+    <span style="top: 15%; left: 50%;"></span>
+    <span style="top: 20%; left: 70%;"></span>
+    <span style="top: 30%; left: 30%;"></span>
+    <span style="top: 35%; left: 80%;"></span>
+  </div>
+
+  <!-- Balloons -->
+  <div class="balloons">
+    <div class="balloon" style="left: 20%; animation-delay: 0s;"></div>
+    <div class="balloon" style="left: 40%; animation-delay: 1s;"></div>
+    <div class="balloon" style="left: 60%; animation-delay: 2s;"></div>
+    <div class="balloon" style="left: 80%; animation-delay: 3s;"></div>
   </div>
 
   <!-- Birthday Card -->
@@ -115,10 +165,9 @@
     <div class="card-content">🎉 Tap to Open 🎉</div>
   </div>
 
-  <!-- Music Toggle Button -->
-  <button class="music-toggle" id="musicToggle">🔊 Play Music</button>
+  <div class="card-flip">🎁 Flip me for the surprise! 🎁</div>
 
-  <!-- Audio Element -->
+  <!-- Audio -->
   <audio id="birthdaySong" loop>
     <source src="https://www.fesliyanstudios.com/play-mp3/387" type="audio/mpeg">
     Your browser does not support the audio element.
@@ -126,26 +175,15 @@
 
   <script>
     const card = document.getElementById('birthdayCard');
-    const musicToggle = document.getElementById('musicToggle');
     const birthdaySong = document.getElementById('birthdaySong');
 
-    // Card flip logic
+    // Card flip logic and play music
     card.addEventListener('click', () => {
       card.classList.add('open');
-    });
-
-    // Music toggle logic
-    let isPlaying = false;
-
-    musicToggle.addEventListener('click', () => {
-      if (isPlaying) {
-        birthdaySong.pause();
-        musicToggle.textContent = "🔊 Play Music";
-      } else {
-        birthdaySong.play();
-        musicToggle.textContent = "🔇 Pause Music";
-      }
-      isPlaying = !isPlaying;
+      birthdaySong.play(); // Play the birthday song
+      setTimeout(() => {
+        card.style.display = 'none';
+      }, 1000);
     });
   </script>
 </body>
